--- a/Assignment2/page1.html
+++ b/Assignment2/page1.html
@@ -12,8 +12,8 @@
       <br><b>Director:</b> Rose Marshack
       <br><b>Degrees Offered:</b> B.A., B.S.</p>
       <ul>
-        <li><a href="page2.HTML"> References</a>
-        <li><a href="page3.HTML"> Classes</a>
+        <li><a href="page2.html"> References</a>
+        <li><a href="page3.html"> Classes</a>
       </ul>
   </body>
 </html>
