--- a/Assignment2/page2.html
+++ b/Assignment2/page2.html
@@ -37,8 +37,8 @@
           <h3><b>Capstone Experience in Creative Technologies (3 hours)</b></h3>
             <P>Internship in Creative Technologies (CTK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. CTK 260).</P>
             <ul>
-              <li><a href="page1.HTML"> Main</a>
-              <li><a href="page3.HTML"> Classes</a>
+              <li><a href="page1.html"> Main</a>
+              <li><a href="page3.html"> Classes</a>
             </ul>
   </body>
 </html>
