--- a/Assignment2/page3.html
+++ b/Assignment2/page3.html
@@ -56,8 +56,8 @@
       <h2><b>398 PROFESSIONAL PRACTICE: COOPERATIVE EDUCATION/INTERNSHIP IN ARTS MICRO COMPUTER APPLICATIONS</b></h2>
         <p>Internship providing the opportunity to apply knowledge of creative technologies in arts agencies, business and/or education settings.  Prerequisites: CTK 201; 1 course selected from CTK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.</p>
         <ul>
-          <li><a href="page1.HTML"> Main</a>
-          <li><a href="page2.HTML"> Requirements</a>
+          <li><a href="page1.html"> Main</a>
+          <li><a href="page2.html"> Requirements</a>
         </ul>
   </body>
 </html>
