--- a/MySite/AboutMe.html
+++ b/MySite/AboutMe.html
@@ -2,8 +2,26 @@
 <head>
    <meta charset="UTF-8" />
    <title>AboutMe</title>
+   <link href="basicyes2.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <p> Under Construction </p>
+  <div id="wrapper">
+    <h1>About Me</h1>
+
+
+      <main>
+        <img class="floatimage me" src="ishme.jpg" alt="Me" />
+        <p class="text"> From drawing animals, to drawing characters and ideas. From writing gibberish to writing fantasy stories and actions. From playing a Viola to creating Electronic Epic Music. <br>
+        My name is Aspyn Bush. I am an artist of all kinds; writing, drawing, and composing. I've always been fond of creating things simply from my imagination and giving life to them not only for me but for others to see. On December 15 of the year 2000, I was brought into this world blessed with these gifts. It took me a while, however, to really understand just how much I was really capable of. I started drawing in preschool, playing viola in elementary school, and writing in highschool. All while playing sports and doing other extracurricular activities. <br> When I graduated highschool, I went straight into the military. It wasn't until I enrolled in Illinois State University did I even know how much I loved the arts. Especially composition. I had gotten a computer and FL Studio as soon as I possibly could, hoping to improve at any quick rate to make up for the delay of my realization. It was frustrating, as learning certain musical necessities was hard and stressing...Music Theory. But I still improved, and still made my music. <br> On the side I continued to draw and learn new instruments. In the present, these improvements will not stop. I intend to get better and better. And this website is just one of the things I have done to push me further into the industry I've grown to love so much. </p>
+      </main>
+      <nav>
+        <ul>
+          <li> <p class="roundedbox"><a href="HomePage.html"> Home </a></p>
+          <li> <p class="roundedbox"><a href="Art.html"> Art </a></p>
+          <li> <p class="roundedbox"><a href="Music.html"> Music </a></p>
+          <li> <p class="roundedbox"><a href="Contact.html"> Contact </a></p>
+
+        </ul>
+      </nav>
 </body>
 </html>
