--- a/MySite/Contact.html
+++ b/MySite/Contact.html
@@ -1,9 +1,26 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8" />
-   <title>AboutMe</title>
+   <title>Contact</title>
+   <link href="basicyes2.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <p> Under Construction </p>
+  <div id="wrapper">
+    <h1>My Social</h1>
+
+      <main>
+        <p class="text"> Here are some other places that I tend to put my work, and places where you can keep track of my creative process by viewing things I haven't and wouldn't post on my site!</p>
+
+            <a href="https://www.instagram.com/apnxecho/" target="_blank"><img src="insta2.png" alt="art" /> </a>
+            <a href="https://on.soundcloud.com/a8osc" target="_blank"><img src="soundcloud4.png" alt="music" /> </a>
+      </main>
+      <nav>
+        <ul>
+          <li> <p class="roundedbox"><a href="HomePage.html"> Home </a></p>
+          <li> <p class="roundedbox"><a href="AboutMe.html"> About Me </a></p>
+          <li> <p class="roundedbox"><a href="Art.html"> Art </a></p>
+          <li> <p class="roundedbox"><a href="Music.html"> Music </a></p>
+        </ul>
+      </nav>
 </body>
 </html>
