--- a/MySite/HomePage.html
+++ b/MySite/HomePage.html
@@ -7,13 +7,13 @@
 <body>
   <div id="wrapper">
 
-   <h1> My Online Portfolio </h1>
+   <h1><p class="textshadowbox">My Online Portfolio</p></h1>
     <nav>
       <ul>
-        <li> <a href="AboutMe.html"> About Me </a>
-        <li> <a href="Art.html"> Art </a>
-        <li> <a href="Music.html"> Music </a>
-        <li> <a href="Contact.html"> Contact </a>
+        <li class="roundedbox"><a href="AboutMe.html"> About Me </a></li>
+        <li class="roundedbox"><a href="Art.html"> Art </a></li>
+        <li class="roundedbox"><a href="Music.html"> Music </a></li>
+        <li class="roundedbox"><a href="Contact.html"> Contact </a></li>
       </ul>
     </nav>
       <main>
