--- a/MySite/Music.html
+++ b/MySite/Music.html
@@ -21,7 +21,7 @@
         <h2> Seaman's Dream </h2>
           <img class="floatimage music" src="boat.jpg" alt="Ship" />
             <p class="text"> A piece I wrote on behalf of someone I know who loves to sail, though I can't fathom why. A piece that begins adventerous, and ends in desire and hope.</p>
-            <audio controls autobuffer autoplay >
+            <audio controls autobuffer>
               <source src="Seaman's Dream.mp3" type="audio/mpeg" />
             </audio>
         <h2> Echo's Theme </h2>
